Fixed the overlapping bug

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -118,4 +118,10 @@ a:hover {
     .reverseColumn {
         flex-direction: column-reverse;
     }
+    .pageDiv {
+        height: auto;
+    }
+    .firstDiv {
+        height: 100%;
+    }
 }
